--- a/programmin.html
+++ b/programmin.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <head>Welcome to my website</head>
-        <h1>hello programming world!</h1>
+        <h1 style=color:"blue">hello programming world!</h1>
         <h2>This is a new project</h2>
     </body>
 
