move style property

--- a/programmin.html
+++ b/programmin.html
@@ -2,11 +2,16 @@
 <html lang="en">
     <head>
         <title>Programming</title>
+        <style>
+            h1 {
+                color:blue;
+            }
+        </style>
     </head>
     <body>
         <head>Welcome to my website</head>     
 
-        <h1 style="color:blue";>hello programming world!!!</h1>
+        <h1>hello programming world!!!</h1>
 
         <h2>This is a new project</h2>
     </body>
